--- a/index.html
+++ b/index.html
@@ -355,7 +355,8 @@
                 </div>
                 <div class="packages-futer">
                   <div class="packages__price">
-                    <strong class="packages__pricetag--through"
+                    <strong
+                      class="packages__pricetag packages__pricetag--through"
                       >$ 10,500</strong
                     >
                     <strong class="packages__pricetag">$ 8,500</strong>
@@ -367,15 +368,19 @@
             <div class="packages-variant-2">
               <div class="packages-subvariant-3">
                 <img
-                  class="packages__image--small"
+                  class="packages__image packages__image--small"
                   src="image/belle-mare.jpg"
                   alt="Hotel: LUX* Belle Mare"
                 />
-                <span class="packages__lable--small">Flash Offer</span>
+                <span class="packages__lable packages__lable--small"
+                  >Flash Offer</span
+                >
               </div>
               <div class="packages-subvariant-4">
-                <h2 class="packages__hotel-name--small">LUX* Belle Mare</h2>
-                <div class="packages__room--small">
+                <h2 class="packages__hotel-name packages__hotel-name--small">
+                  LUX* Belle Mare
+                </h2>
+                <div class="packages__room packages__room--small">
                   <div class="packages__geolocation">
                     <img
                       src="image/geolocation.svg"
@@ -407,7 +412,8 @@
                 </div>
                 <div class="packages-futer">
                   <div class="packages__price">
-                    <strong class="packages__pricetag--through"
+                    <strong
+                      class="packages__pricetag packages__pricetag--through"
                       >$ 10,500</strong
                     >
                     <strong class="packages__pricetag">$ 8,500</strong>
@@ -419,15 +425,19 @@
             <div class="packages-variant-2">
               <div class="packages-subvariant-3">
                 <img
-                  class="packages__image--small"
+                  class="packages__image packages__image--small"
                   src="image/White-Palace.jpg"
                   alt="Hotel: White Palace"
                 />
-                <span class="packages__lable--small">Flash Offer</span>
+                <span class="packages__lable packages__lable--small"
+                  >Flash Offer</span
+                >
               </div>
               <div class="packages-subvariant-4">
-                <h2 class="packages__hotel-name--small">White Palace</h2>
-                <div class="packages__room--small">
+                <h2 class="packages__hotel-name packages__hotel-name--small">
+                  White Palace
+                </h2>
+                <div class="packages__room packages__room--small">
                   <div class="packages__geolocation">
                     <img
                       src="image/geolocation.svg"
@@ -459,7 +469,8 @@
                 </div>
                 <div class="packages-futer">
                   <div class="packages__price">
-                    <strong class="packages__pricetag--through"
+                    <strong
+                      class="packages__pricetag packages__pricetag--through"
                       >$ 10,500</strong
                     >
                     <strong class="packages__pricetag">$ 9,500</strong>
