--- a/index.html
+++ b/index.html
@@ -482,15 +482,19 @@
             <div class="packages-variant-2">
               <div class="packages-subvariant-3">
                 <img
-                  class="packages__image--small"
+                  class="packages__image packages__image--small"
                   src="image/Luxury-Place.jpg"
                   alt="Hotel: Luxury Place"
                 />
-                <span class="packages__lable--small">Flash Offer</span>
+                <span class="packages__lable packages__lable--small"
+                  >Flash Offer</span
+                >
               </div>
               <div class="packages-subvariant-4">
-                <h2 class="packages__hotel-name--small">Luxury Place</h2>
-                <div class="packages__room--small">
+                <h2 class="packages__hotel-name packages__hotel-name--small">
+                  Luxury Place
+                </h2>
+                <div class="packages__room packages__room--small">
                   <div class="packages__geolocation">
                     <img
                       src="image/geolocation.svg"
@@ -522,7 +526,10 @@
                 </div>
                 <div class="packages-futer">
                   <div class="packages__price">
-                    <strong class="packages__pricetag--through">$ 4,500</strong>
+                    <strong
+                      class="packages__pricetag packages__pricetag--through"
+                      >$ 4,500</strong
+                    >
                     <strong class="packages__pricetag">$ 2,500</strong>
                   </div>
                   <button class="packages__button">Book Now</button>
@@ -532,15 +539,19 @@
             <div class="packages-variant-2">
               <div class="packages-subvariant-3">
                 <img
-                  class="packages__image--small"
+                  class="packages__image packages__image--small"
                   src="image/Hotel-Five-Star.jpg"
                   alt="Hotel: Five Star"
                 />
-                <span class="packages__lable--small">Flash Offer</span>
+                <span class="packages__lable packages__lable--small"
+                  >Flash Offer</span
+                >
               </div>
               <div class="packages-subvariant-4">
-                <h2 class="packages__hotel-name--small">Hotel Five Star</h2>
-                <div class="packages__room--small">
+                <h2 class="packages__hotel-name packages__hotel-name--small">
+                  Hotel Five Star
+                </h2>
+                <div class="packages__room packages__room--small">
                   <div class="packages__geolocation">
                     <img
                       src="image/geolocation.svg"
@@ -572,7 +583,10 @@
                 </div>
                 <div class="packages-futer">
                   <div class="packages__price">
-                    <strong class="packages__pricetag--through">$ 6,500</strong>
+                    <strong
+                      class="packages__pricetag packages__pricetag--through"
+                      >$ 6,500</strong
+                    >
                     <strong class="packages__pricetag">$ 3,500</strong>
                   </div>
                   <button class="packages__button">Book Now</button>
