--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <!-- /.breadcrumb -->
     <section class="hotel">
       <div class="container">
-        <div class="hotel-info">
+        <div class="hotel-info hotel__header">
           <div class="hotel-info__text">
             <div class="hotel-wrapper">
               <div class="stars">
@@ -164,7 +164,11 @@
           <!-- /.hotel-info__text -->
           <div class="rating hotel-info__rating">
             <span class="rating__text">User Rattings</span>
-            <span class="rating__counter">4.5/5</span>
+            <span class="rating__counter"
+              >4.5/<sub class="rating__counter rating__counter--sub"
+                >5</sub
+              ></span
+            >
           </div>
           <!-- /.hotel-info__rating -->
         </div>
@@ -624,7 +628,7 @@
     <!-- /.newsletter -->
     <section class="reviews">
       <div class="container">
-        <h2 class="reviews__title">What people think about&nbsp;us</h2>
+        <h2 class="reviews__title">What people thinks about&nbsp;us</h2>
         <div class="swiper reviews-slider">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
@@ -1013,7 +1017,7 @@
           </div>
           <!-- /.footer__contact-details -->
           <div class="footer__contact-form">
-            <h3 class="footer__title">Send us a message</h3>
+            <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
             <form class="footer__form" action="#">
               <input
                 type="text"
