add: create phpmailer

--- a/index.html
+++ b/index.html
@@ -1018,22 +1018,25 @@
           <!-- /.footer__contact-details -->
           <div class="footer__contact-form">
             <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
-            <form class="footer__form" action="#">
+            <form class="footer__form" action="send.php" method="POST">
               <input
                 type="text"
                 class="input footer__input"
                 placeholder="Your Full Name*"
+                name="name"
               />
               <input
                 type="text"
                 class="input footer__input"
                 placeholder="Phone Number*"
+                name="phone"
               />
               <textarea
                 cols="30"
                 rows="10"
                 class="footer__message"
                 placeholder="Message"
+                name="message"
               ></textarea>
               <button class="footer__button" type="submit">Send</button>
               <span class="footer__info">* Required Fields</span>
