create: add php in newsleter

--- a/index.html
+++ b/index.html
@@ -614,11 +614,16 @@
           subscribe to our
           <span class="newsletter-title__strong">Newsletter</span>
         </h2>
-        <form action="#" class="subscribe newsletter__subscribe">
+        <form
+          class="subscribe newsletter__subscribe"
+          action="send.php"
+          method="POST"
+        >
           <input
             type="text"
             class="subscribe__input"
             placeholder="Your email address"
+            name="email"
           />
           <button class="subscribe__button">Send</button>
         </form>
