fix: add scrol and botton-home in hotel

--- a/thankyou.html
+++ b/thankyou.html
@@ -151,6 +151,9 @@
             <p class="hotel-description">
               Our manager will call you within 20 minutes
             </p>
+            <button class="button-home">
+              <a class="button-home__link" href="index.html">main page</a>
+            </button>
           </div>
           <!-- /.hotel-info__text -->
         </div>
