fix form in .subscribe

--- a/index.html
+++ b/index.html
@@ -1107,6 +1107,8 @@
             class="input modal__input"
             placeholder="Your Full Name*"
             name="name"
+            minlength="2"
+            maxlength="20"
             required
           />
           <input
