add aos animation

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -617,10 +618,10 @@
           <span class="newsletter-title__strong">Newsletter</span>
         </h2>
         <form
-          id="form"
           class="subscribe newsletter__subscribe form"
           action="send.php"
           method="POST"
+          data-aos="fade-left"
         >
           <input
             type="email"
@@ -826,7 +827,11 @@
           </div>
           <!-- /.activities-header -->
           <div class="activities-info">
-            <div class="activities-variant">
+            <div
+              class="activities-variant"
+              data-aos="flip-down"
+              data-aos-delay="100"
+            >
               <img
                 src="image/activities-variant-1.jpg"
                 alt=""
@@ -839,7 +844,11 @@
               <button class="activities-variant__button">Book Now</button>
             </div>
             <!-- /.activities-variant -->
-            <div class="activities-variant">
+            <div
+              class="activities-variant"
+              data-aos="flip-down"
+              data-aos-delay="200"
+            >
               <img
                 src="image/activities-variant-2.jpg"
                 alt=""
@@ -852,7 +861,11 @@
               <button class="activities-variant__button">Book Now</button>
             </div>
             <!-- /.activities-variant -->
-            <div class="activities-variant">
+            <div
+              class="activities-variant"
+              data-aos="flip-down"
+              data-aos-delay="300"
+            >
               <img
                 src="image/activities-variant-3.jpg"
                 alt=""
@@ -865,7 +878,11 @@
               <button class="activities-variant__button">Book Now</button>
             </div>
             <!-- /.activities-variant -->
-            <div class="activities-variant">
+            <div
+              class="activities-variant"
+              data-aos="flip-down"
+              data-aos-delay="400"
+            >
               <img
                 src="image/activities-variant-4.jpg"
                 alt=""
@@ -1146,6 +1163,7 @@
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/inputmask.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script src="js/aos.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
