--- a/index.html
+++ b/index.html
@@ -270,7 +270,16 @@
               </button>
             </div>
             <!-- /.booking -->
-            <div id="map" class="map"></div>
+            <div id="map" class="map">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3955.004632620648!2d79.80141631525208!3d7.574472312153177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2c96110de8289%3A0x3fd7668bc2d85eb9!2sGrand%20Hilton%20Hotel!5e0!3m2!1sru!2sru!4v1646039583818!5m2!1sru!2sru"
+                width="100%"
+                height="100%"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+              ></iframe>
+            </div>
             <!-- /.map -->
           </div>
           <!-- /.hotel-right -->
@@ -1155,10 +1164,6 @@
       </div>
       <!-- /.modal__dialog -->
     </modal>
-    <script
-      src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU"
-      type="text/javascript"
-    ></script>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/inputmask.min.js"></script>
