--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
           <a href="#" class="user navbar__user navbar__user--mobile-hidden">
             <img
-              src="./image/user-avatar.jpg"
+              src="./image/user-avatar.webp"
               alt="Avatar: Nathan"
               class="user__avatar"
             />
@@ -71,7 +71,7 @@
                   class="user navbar__user navbar__user--mobile-visible"
                 >
                   <img
-                    src="./image/user-avatar.jpg"
+                    src="./image/user-avatar.webp"
                     alt="Avatar: Nathan"
                     class="user__avatar"
                   />
@@ -183,35 +183,35 @@
               <div class="swiper-slide hotel-slider__item">
                 <img
                   class="hotel-slider__image"
-                  src="image/slide-1.jpg"
+                  src="image/slide-1.webp"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
                   class="hotel-slider__image"
-                  src="image/slide-2.jpg"
+                  src="image/slide-2.webp"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
                   class="hotel-slider__image"
-                  src="image/slide-3.jpg"
+                  src="image/slide-3.webp"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
                   class="hotel-slider__image"
-                  src="image/slide-4.jpg"
+                  src="image/slide-4.webp"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
                   class="hotel-slider__image"
-                  src="image/slide-5.jpg"
+                  src="image/slide-5.webp"
                   alt="slide"
                 />
               </div>
@@ -298,7 +298,7 @@
               <div class="packages-subvariant-1">
                 <img
                   class="packages__image"
-                  src="image/hotel-blue-haven.jpg"
+                  src="image/hotel-blue-haven.webp"
                   alt="Hotel: Blue Haven"
                 />
                 <span class="packages__lable">Flash Offer</span>
@@ -385,7 +385,7 @@
               <div class="packages-subvariant-3">
                 <img
                   class="packages__image packages__image--small"
-                  src="image/belle-mare.jpg"
+                  src="image/belle-mare.webp"
                   alt="Hotel: LUX* Belle Mare"
                 />
                 <span class="packages__lable packages__lable--small"
@@ -442,7 +442,7 @@
               <div class="packages-subvariant-3">
                 <img
                   class="packages__image packages__image--small"
-                  src="image/White-Palace.jpg"
+                  src="image/White-Palace.webp"
                   alt="Hotel: White Palace"
                 />
                 <span class="packages__lable packages__lable--small"
@@ -499,7 +499,7 @@
               <div class="packages-subvariant-3">
                 <img
                   class="packages__image packages__image--small"
-                  src="image/Luxury-Place.jpg"
+                  src="image/Luxury-Place.webp"
                   alt="Hotel: Luxury Place"
                 />
                 <span class="packages__lable packages__lable--small"
@@ -556,7 +556,7 @@
               <div class="packages-subvariant-3">
                 <img
                   class="packages__image packages__image--small"
-                  src="image/Hotel-Five-Star.jpg"
+                  src="image/Hotel-Five-Star.webp"
                   alt="Hotel: Five Star"
                 />
                 <span class="packages__lable packages__lable--small"
@@ -619,7 +619,7 @@
     <!-- /.packages -->
     <section
       class="newsletter parallax"
-      data-image-src="image/newsletter-bg.jpg"
+      data-image-src="image/newsletter-bg.webp"
     >
       <div class="newsletter-wrapper newsletter__container">
         <h2 class="newsletter-title">
@@ -654,7 +654,7 @@
               <div class="reviews-slider__item">
                 <div class="reviews-slider__profile">
                   <img
-                    src="image/reviews-avatar-1.jpg"
+                    src="image/reviews-avatar-1.webp"
                     alt="Photo: Megan Fox"
                     class="reviews-slider__avatar"
                   />
@@ -710,7 +710,7 @@
               <div class="reviews-slider__item">
                 <div class="reviews-slider__profile">
                   <img
-                    src="image/reviews-avatar-2.jpg"
+                    src="image/reviews-avatar-2.webp"
                     alt="Photo: Brad Pitt"
                     class="reviews-slider__avatar"
                   />
@@ -764,7 +764,7 @@
               <div class="reviews-slider__item">
                 <div class="reviews-slider__profile">
                   <img
-                    src="image/reviews-avatar-3.jpg"
+                    src="image/reviews-avatar-3.webp"
                     alt="Photo: Alexey Dolmatov"
                     class="reviews-slider__avatar"
                   />
@@ -842,7 +842,7 @@
               data-aos-delay="100"
             >
               <img
-                src="image/activities-variant-1.jpg"
+                src="image/activities-variant-1.webp"
                 alt=""
                 class="activities-variant__img"
               />
@@ -859,7 +859,7 @@
               data-aos-delay="200"
             >
               <img
-                src="image/activities-variant-2.jpg"
+                src="image/activities-variant-2.webp"
                 alt=""
                 class="activities-variant__img"
               />
@@ -876,7 +876,7 @@
               data-aos-delay="300"
             >
               <img
-                src="image/activities-variant-3.jpg"
+                src="image/activities-variant-3.webp"
                 alt=""
                 class="activities-variant__img"
               />
@@ -893,7 +893,7 @@
               data-aos-delay="400"
             >
               <img
-                src="image/activities-variant-4.jpg"
+                src="image/activities-variant-4.webp"
                 alt=""
                 class="activities-variant__img"
               />
@@ -1105,7 +1105,7 @@
           </div>
           <!-- /.footer__bottom -->
           <img
-            src="image/payment.png"
+            src="image/payment.webp"
             alt="Payment Method"
             class="footer__payment"
           />
