--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Best Tour Plan - Hotel Booking</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;600;800&display=swap"
-      rel="preload"
+      rel="stylesheet"
     />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/aos.css" />
