--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               class="search__input"
               placeholder="Search Location"
             />
-            <button class="search__button">
+            <button class="button search__button">
               <img
                 class="search__image"
                 src="./image/search.svg"
@@ -88,7 +88,7 @@
                     class="search__input"
                     placeholder="Search Location"
                   />
-                  <button class="search__button">
+                  <button data-toggle="modal" class="search__button">
                     <img
                       class="search__image"
                       src="./image/search.svg"
@@ -377,7 +377,9 @@
                     >
                     <strong class="packages__pricetag">$ 8,500</strong>
                   </div>
-                  <button class="packages__button">Book Now</button>
+                  <button data-toggle="modal" class="button packages__button">
+                    Book Now
+                  </button>
                 </div>
               </div>
             </div>
@@ -434,7 +436,9 @@
                     >
                     <strong class="packages__pricetag">$ 8,500</strong>
                   </div>
-                  <button class="packages__button">Book Now</button>
+                  <button data-toggle="modal" class="button packages__button">
+                    Book Now
+                  </button>
                 </div>
               </div>
             </div>
@@ -491,7 +495,9 @@
                     >
                     <strong class="packages__pricetag">$ 9,500</strong>
                   </div>
-                  <button class="packages__button">Book Now</button>
+                  <button data-toggle="modal" class="button packages__button">
+                    Book Now
+                  </button>
                 </div>
               </div>
             </div>
@@ -548,7 +554,9 @@
                     >
                     <strong class="packages__pricetag">$ 2,500</strong>
                   </div>
-                  <button class="packages__button">Book Now</button>
+                  <button data-toggle="modal" class="button packages__button">
+                    Book Now
+                  </button>
                 </div>
               </div>
             </div>
@@ -605,7 +613,9 @@
                     >
                     <strong class="packages__pricetag">$ 3,500</strong>
                   </div>
-                  <button class="packages__button">Book Now</button>
+                  <button data-toggle="modal" class="button packages__button">
+                    Book Now
+                  </button>
                 </div>
               </div>
             </div>
@@ -639,7 +649,7 @@
             name="email"
             required
           />
-          <button class="subscribe__button">Send</button>
+          <button class="button subscribe__button">Send</button>
         </form>
       </div>
       <!-- /.newsletter-wrapper -->
@@ -843,14 +853,19 @@
             >
               <img
                 src="image/activities-variant-1.webp"
-                alt=""
+                alt="Foto: Activities Variant"
                 class="activities-variant__img"
               />
               <span class="activities-variant__text"
                 >The curious corner <br />
                 of chamarel</span
               >
-              <button class="activities-variant__button">Book Now</button>
+              <button
+                data-toggle="modal"
+                class="button activities-variant__button"
+              >
+                Book Now
+              </button>
             </div>
             <!-- /.activities-variant -->
             <div
@@ -860,14 +875,19 @@
             >
               <img
                 src="image/activities-variant-2.webp"
-                alt=""
+                alt="Foto: Activities Variant"
                 class="activities-variant__img"
               />
               <span class="activities-variant__text"
                 >Gymkhana club golf <br />
                 course</span
               >
-              <button class="activities-variant__button">Book Now</button>
+              <button
+                data-toggle="modal"
+                class="button activities-variant__button"
+              >
+                Book Now
+              </button>
             </div>
             <!-- /.activities-variant -->
             <div
@@ -877,14 +897,19 @@
             >
               <img
                 src="image/activities-variant-3.webp"
-                alt=""
+                alt="Foto: Activities Variant"
                 class="activities-variant__img"
               />
               <span class="activities-variant__text"
                 >Tamarind falls hiking <br />
                 trip - full day
               </span>
-              <button class="activities-variant__button">Book Now</button>
+              <button
+                data-toggle="modal"
+                class="button activities-variant__button"
+              >
+                Book Now
+              </button>
             </div>
             <!-- /.activities-variant -->
             <div
@@ -894,14 +919,19 @@
             >
               <img
                 src="image/activities-variant-4.webp"
-                alt=""
+                alt="Foto: Activities Variant"
                 class="activities-variant__img"
               />
               <span class="activities-variant__text"
                 >The blue marine discovery <br />
                 quest</span
               >
-              <button class="activities-variant__button">Book Now</button>
+              <button
+                data-toggle="modal"
+                class="button activities-variant__button"
+              >
+                Book Now
+              </button>
             </div>
             <!-- /.activities-variant -->
           </div>
@@ -915,7 +945,9 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-wrapper">
-          <img src="image/vertical-logo.svg" alt="" class="footer__logo" />
+          <a href="#" class="footer__logo">
+            <img src="image/vertical-logo.svg" alt="Logo: Best Tour Plan" />
+          </a>
           <div class="footer__list footer__categories">
             <h3 class="footer__title">ALL CATEGORIES</h3>
             <ul class="footer__ul">
@@ -976,13 +1008,22 @@
           <div class="footer__social-network">
             <h3 class="footer__title footer__title--inline">Social Network</h3>
             <div class="footer__social-links">
-              <a href="#" class="footer__link">
+              <a
+                href="https://www.facebook.com/besttourplanner/"
+                class="footer__link"
+              >
                 <img src="image/facebook.svg" alt="Icon: Facebook" />
               </a>
-              <a href="#" class="footer__link">
+              <a
+                href="https://www.youtube.com/c/drewbinsky/featured"
+                class="footer__link"
+              >
                 <img src="image/youtube.svg" alt="Icon: Youtube" />
               </a>
-              <a href="#" class="footer__link">
+              <a
+                href="https://www.instagram.com/besttourplanner/"
+                class="footer__link"
+              >
                 <img src="image/instagram.svg" alt="Icon: Instagram" />
               </a>
             </div>
@@ -1021,7 +1062,6 @@
                     alt="Icon: map"
                   />
                 </div>
-
                 9748 Blossom Hill Rd undefined Lansing, Idaho 68545 United
                 States
               </li>
@@ -1033,10 +1073,25 @@
                     alt="Icon: phone"
                   />
                 </div>
-                Tel (business hours) : 269 1500 <br />
-                Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am – 20:00
-                pm) <br />
-                Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm)
+                <ul class="footer__ul">
+                  <li class="footer__item">
+                    <a href="tel:269-1500" class="footer__link"
+                      >Tel (business hours) : 269-1500</a
+                    >
+                  </li>
+                  <li class="footer__item">
+                    <a href="tel:52-56-61-38" class="footer__link"
+                      >Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am –
+                      20:00 pm)</a
+                    >
+                  </li>
+                  <li class="footer__item">
+                    <a href="tel:52-56-61-38" class="footer__link"
+                      >Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00
+                      pm)</a
+                    >
+                  </li>
+                </ul>
               </li>
               <li class="footer__item footer__item--mb-2">
                 <div class="footer__icon-wrapper">
@@ -1046,19 +1101,16 @@
                     alt="Icon: email"
                   />
                 </div>
-                cherly.lawson@example.com
+                <a href="mailto:cherly.lawson@example.com" class="footer__link"
+                  >cherly.lawson@example.com</a
+                >
               </li>
             </ul>
           </div>
           <!-- /.footer__contact-details -->
           <div class="footer__contact-form">
             <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
-            <form
-              id="form"
-              class="footer__form form"
-              action="send.php"
-              method="POST"
-            >
+            <form class="footer__form form" action="send.php" method="POST">
               <div class="footer__input-group">
                 <input
                   type="text"
@@ -1084,7 +1136,7 @@
                 placeholder="Message"
                 name="message"
               ></textarea>
-              <button class="footer__button" type="submit">Send</button>
+              <button class="button footer__button" type="submit">Send</button>
               <span class="footer__info">* Required Fields</span>
             </form>
           </div>
@@ -1105,7 +1157,7 @@
           </div>
           <!-- /.footer__bottom -->
           <img
-            src="image/payment.webp"
+            src="image/payment.jpg"
             alt="Payment Method"
             class="footer__payment"
           />
@@ -1122,12 +1174,7 @@
           <img src="image/close.svg" alt="Icon: close" />
         </a>
         <h3 class="modal__title">Booking</h3>
-        <form
-          id="form"
-          class="modal__form form"
-          action="send.php"
-          method="POST"
-        >
+        <form class="modal__form form" action="send.php" method="POST">
           <input
             type="text"
             class="input modal__input"
@@ -1157,7 +1204,13 @@
             name="message"
           ></textarea>
           <div class="modal__footer">
-            <button class="modal__button" type="submit">Send</button>
+            <button
+              data-toggle="modal"
+              class="button modal__button"
+              type="submit"
+            >
+              Send
+            </button>
             <span class="modal__info">* Required Fields</span>
           </div>
         </form>
