--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best Tour Plan - Hotel Booking</title>
+    <link rel="icon" href="image/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;600;800&display=swap"
       rel="stylesheet"
@@ -12,6 +14,7 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <header class="navbar navbar--mobile-fixed">
@@ -390,10 +393,10 @@
                   src="image/belle-mare.webp"
                   alt="Hotel: LUX* Belle Mare"
                 />
-                <span class="packages__lable packages__lable--small"
-                  >Flash Offer</span
-                >
               </div>
+              <span class="packages__lable packages__lable--small"
+                >Flash Offer</span
+              >
               <div class="packages-subvariant-4">
                 <h2 class="packages__hotel-name packages__hotel-name--small">
                   LUX* Belle Mare
@@ -1221,7 +1224,7 @@
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/inputmask.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
-    <script src="js/aos.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
