--- a/thankyou.html
+++ b/thankyou.html
@@ -19,7 +19,7 @@
     <header class="navbar navbar--mobile-fixed">
       <div class="container">
         <div class="navbar-top">
-          <a href="#" class="logo">
+          <a href="index.html" class="logo">
             <img
               src="image/horizontal-logo.svg"
               alt="Logo: Best Tour plan"
@@ -168,7 +168,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-wrapper">
-          <a href="#" class="footer__logo">
+          <a href="index.html" class="footer__logo">
             <img src="image/vertical-logo.svg" alt="Logo: Best Tour Plan" />
           </a>
           <div class="footer__list footer__categories">
