--- a/index.html
+++ b/index.html
@@ -859,16 +859,19 @@
                 alt="Foto: Activities Variant"
                 class="activities-variant__img"
               />
-              <span class="activities-variant__text"
-                >The curious corner <br />
-                of chamarel</span
-              >
-              <button
-                data-toggle="modal"
-                class="button activities-variant__button"
-              >
-                Book Now
-              </button>
+              <div class="activities-variant__bottom">
+                <span class="activities-variant__text"
+                  >The curious corner <br />
+                  of chamarel</span
+                >
+                <button
+                  data-toggle="modal"
+                  class="button activities-variant__button"
+                >
+                  Book Now
+                </button>
+              </div>
+              <!-- /.activities-variant__bottom -->
             </div>
             <!-- /.activities-variant -->
             <div
@@ -881,16 +884,19 @@
                 alt="Foto: Activities Variant"
                 class="activities-variant__img"
               />
-              <span class="activities-variant__text"
-                >Gymkhana club golf <br />
-                course</span
-              >
-              <button
-                data-toggle="modal"
-                class="button activities-variant__button"
-              >
-                Book Now
-              </button>
+              <div class="activities-variant__bottom-2">
+                <span class="activities-variant__text"
+                  >Gymkhana club golf <br />
+                  course</span
+                >
+                <button
+                  data-toggle="modal"
+                  class="button activities-variant__button"
+                >
+                  Book Now
+                </button>
+              </div>
+              <!-- /.activities-variant__bottom -->
             </div>
             <!-- /.activities-variant -->
             <div
@@ -903,16 +909,19 @@
                 alt="Foto: Activities Variant"
                 class="activities-variant__img"
               />
-              <span class="activities-variant__text"
-                >Tamarind falls hiking <br />
-                trip - full day
-              </span>
-              <button
-                data-toggle="modal"
-                class="button activities-variant__button"
-              >
-                Book Now
-              </button>
+              <div class="activities-variant__bottom-3">
+                <span class="activities-variant__text"
+                  >Tamarind falls hiking <br />
+                  trip - full day
+                </span>
+                <button
+                  data-toggle="modal"
+                  class="button activities-variant__button"
+                >
+                  Book Now
+                </button>
+                <!-- /.activities-variant__bottom -->
+              </div>
             </div>
             <!-- /.activities-variant -->
             <div
@@ -925,16 +934,19 @@
                 alt="Foto: Activities Variant"
                 class="activities-variant__img"
               />
-              <span class="activities-variant__text"
-                >The blue marine discovery <br />
-                quest</span
-              >
-              <button
-                data-toggle="modal"
-                class="button activities-variant__button"
-              >
-                Book Now
-              </button>
+              <div class="activities-variant__bottom-4">
+                <span class="activities-variant__text"
+                  >The blue marine discovery <br />
+                  quest</span
+                >
+                <button
+                  data-toggle="modal"
+                  class="button activities-variant__button"
+                >
+                  Book Now
+                </button>
+              </div>
+              <!-- /.activities-variant__bottom -->
             </div>
             <!-- /.activities-variant -->
           </div>
