add scrollbar in packages

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                   />
                 </div>
                 <h2 class="packages__hotel-name">Hotel Blue Haven</h2>
-                <p class="packages__info">
+                <p id="element" class="packages__info">
                   Aute quis duis excepteur excepteur ipsum cat eiusmod
                   consectetur enim laborum magna llit. Ipsum est fugiat velit ea
                   llamco do esse ut in veniam sun in onsequat. Aute quis duis
