--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
             </div>
             <!-- /.hotel-wrapper -->
             <p class="hotel-description">
-              Half-Board/ All Inclusive + Complimentary Activities + Child Stays
-              Free
+              Half-Board / All Inclusive + Complimentary Activities + Child
+              Stays Free
             </p>
           </div>
           <!-- /.hotel-info__text -->
@@ -1090,21 +1090,22 @@
                 </div>
                 <ul class="footer__ul">
                   <li class="footer__item">
-                    <a href="tel:269-1500" class="footer__link"
-                      >Tel (business hours) : 269-1500</a
-                    >
+                    Tel (business hours) :
+                    <a href="tel:269-1500" class="footer__link"> 269-1500</a>
                   </li>
                   <li class="footer__item">
-                    <a href="tel:52-56-61-38" class="footer__link"
-                      >Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am –
-                      20:00 pm)</a
-                    >
+                    Tel (hotline) Monday - Saturday:
+                    <a href="tel:52-56-61-38" class="footer__link">
+                      52&nbsp;-&nbsp;56&nbsp;-&nbsp;61&nbsp;-&nbsp;38
+                    </a>
+                    (08:00 am – 20:00 pm)
                   </li>
                   <li class="footer__item">
-                    <a href="tel:52-56-61-38" class="footer__link"
-                      >Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00
-                      pm)</a
-                    >
+                    Tel (hotline) Sunday:
+                    <a href="tel:52-56-61-38" class="footer__link">
+                      52-56-61-38
+                    </a>
+                    (08:&nbsp;00 am – 14:00 pm)
                   </li>
                 </ul>
               </li>
