--- a/index.html
+++ b/index.html
@@ -276,11 +276,12 @@
             <div id="map" class="map">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3955.004632620648!2d79.80141631525208!3d7.574472312153177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2c96110de8289%3A0x3fd7668bc2d85eb9!2sGrand%20Hilton%20Hotel!5e0!3m2!1sru!2sru!4v1646039583818!5m2!1sru!2sru"
-                width="100%"
-                height="100%"
+                width="346"
+                height="213"
                 style="border: 0"
                 allowfullscreen=""
                 loading="lazy"
+                class="map"
               ></iframe>
             </div>
             <!-- /.map -->
@@ -1182,7 +1183,7 @@
       </div>
     </footer>
     <!-- /.footer -->
-    <modal>
+    <div class="modal">
       <div class="modal__overlay"></div>
       <!-- /.modal__overlay -->
       <div class="modal__dialog">
@@ -1232,7 +1233,10 @@
         </form>
       </div>
       <!-- /.modal__dialog -->
-    </modal>
+    </div>
+    <a class="up" href="#"
+      ><img class="up" src="image/up.svg" alt="Icon: Up"
+    /></a>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/inputmask.min.js"></script>
