--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     class="search__input"
                     placeholder="Search Location"
                   />
-                  <button class="search__button">
+                  <button class="button search__button">
                     <img
                       class="search__image"
                       src="./image/search.svg"
